--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "example-with-tailwindcss",
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
+    "dev:dialogs": "bun run ./scripts/parse-md.ts --watch",
+    "dev:server": "vinxi dev",
+    "dev": "run-p dev:*",
     "build": "vinxi build",
+    "prebuild": "bun run ./scripts/parse-md.ts",
     "start": "vinxi start"
   },
   "dependencies": {
@@ -14,18 +17,21 @@
     "postcss": "^8.4.26",
     "solid-js": "^1.8.16",
     "tailwindcss": "^3.3.3",
+    "valibot": "^0.30.0",
     "vinxi": "^0.3.10"
   },
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.12",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bun": "^1.0.12",
     "@types/he": "^1.2.3",
     "he": "^1.2.0",
     "marked": "^12.0.1",
+    "npm-run-all2": "^6.1.2",
     "type-fest": "^4.15.0"
   }
 }
