--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "example-with-tailwindcss",
   "type": "module",
   "scripts": {
-    "dev:dialogs": "bun run ./scripts/parse-md.ts --watch",
-    "dev:server": "vinxi dev",
-    "dev": "run-p dev:*",
+    "dev": "vinxi dev",
     "build": "vinxi build",
-    "prebuild": "bun run ./scripts/parse-md.ts",
     "start": "vinxi start"
   },
   "dependencies": {
+    "@fontsource-variable/platypi": "^5.0.1",
+    "@solid-primitives/event-bus": "^1.0.11",
+    "@solid-primitives/storage": "^3.3.0",
     "@solidjs/router": "^0.13.2",
     "@solidjs/start": "^1.0.0-rc.0",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.14",
     "daisyui": "^4.10.1",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.26",
     "solid-js": "^1.8.16",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.3.3",
     "valibot": "^0.30.0",
-    "vinxi": "^0.3.10"
+    "vinxi": "^0.3.10",
+    "vite-plugin-pwa": "^0.20.0",
+    "vitest": "^1.6.0"
   },
   "engines": {
     "node": ">=18"
@@ -28,10 +33,9 @@
     "@tailwindcss/typography": "^0.5.12",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bun": "^1.0.12",
-    "@types/he": "^1.2.3",
-    "he": "^1.2.0",
-    "marked": "^12.0.1",
-    "npm-run-all2": "^6.1.2",
+    "@types/lodash-es": "^4.17.12",
+    "@vite-pwa/assets-generator": "^0.2.4",
+    "tailwind-scrollbar": "^3.1.0",
     "type-fest": "^4.15.0"
   }
 }
