--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@solid-primitives/storage": "^3.3.0",
     "@solidjs/router": "^0.13.2",
     "@solidjs/start": "^1.0.0-rc.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^4.10.1",
     "lodash-es": "^4.17.21",
+    "nanoid": "^5.1.5",
     "postcss": "^8.4.26",
     "solid-js": "^1.8.16",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^4.1.4",
     "valibot": "^0.30.0",
     "vinxi": "^0.3.10",
     "vite-plugin-pwa": "^0.20.0",
@@ -30,12 +30,14 @@
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.12",
+    "@tailwindcss/typography": "^0.5.16",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/bun": "^1.0.12",
+    "@types/bun": "^1.2.10",
     "@types/lodash-es": "^4.17.12",
     "@vite-pwa/assets-generator": "^0.2.4",
+    "daisyui": "^5.0.27",
     "tailwind-scrollbar": "^3.1.0",
-    "type-fest": "^4.15.0"
+    "type-fest": "^4.15.0",
+    "vite": "^6.3.2"
   }
 }
