--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@solidjs/router": "^0.13.2",
     "@solidjs/start": "^1.0.0-rc.0",
     "@tailwindcss/postcss": "^4.1.4",
-    "add": "^2.0.6",
     "lodash-es": "^4.17.21",
     "nanoid": "^5.1.5",
     "postcss": "^8.4.26",
@@ -37,6 +36,7 @@
     "@vite-pwa/assets-generator": "^0.2.4",
     "daisyui": "^5.0.27",
     "tailwind-scrollbar": "^3.1.0",
+    "typescript": "^5.8.3",
     "type-fest": "^4.15.0",
     "vite": "^6.3.2"
   }
