--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
     "@tailwindcss/postcss": "^4.1.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "lodash-es": "^4.17.21",
     "nanoid": "^5.1.5",
     "postcss": "^8.4.26",
@@ -28,6 +30,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.16",
     "@total-typescript/ts-reset": "^0.5.1",
@@ -35,10 +38,13 @@
     "@types/lodash-es": "^4.17.12",
     "@vite-pwa/assets-generator": "^0.2.4",
     "daisyui": "^5.0.27",
+    "eslint": "^9.26.0",
+    "globals": "^16.1.0",
     "solid-devtools": "^0.34.0",
     "tailwind-scrollbar": "^3.1.0",
     "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0",
     "vite": "^6.3.2"
   }
 }
