--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fontsource-variable/platypi": "^5.0.1",
     "@modular-forms/solid": "^0.25.1",
     "@solid-primitives/context": "^0.3.1",
+    "@solid-primitives/date": "^2.1.2",
     "@solid-primitives/event-bus": "^1.0.11",
     "@solid-primitives/storage": "^3.3.0",
     "@solidjs/router": "^0.15.3",
