--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@solid-primitives/context": "^0.3.1",
     "@solid-primitives/date": "^2.1.2",
     "@solid-primitives/event-bus": "^1.0.11",
+    "@solid-primitives/i18n": "^2.2.1",
     "@solid-primitives/storage": "^3.3.0",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
